examples/type_system/failing/128_lambda_missing_arrow.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/128_lambda_missing_arrow.flx
// error[E034]: Missing Lambda Arrow
//
// I was expecting `->` after the lambda parameters, but I found an identifier.
//
//   examples/type_system/failing/128_lambda_missing_arrow.flx:24:10
//    |
// 24 | let f = \x x + 1
//    |          ^
//    |          - this lambda parameter list ends here
//
// Note:
//   while parsing lambda expression
//
// Help:
//   Use `\x -> expr` or `\(x, y) -> expr`.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E034

let f = \x x + 1
let after = 7
